--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -747,23 +747,23 @@ nav {
 }
 
 .stagedd:first-child {
-      background-repeat: no-repeat;
-  background-size: 100% 0em;
+  //     background-repeat: no-repeat;
+  // background-size: 100% 0em;
 }
-.stagedd {
-  .step {
-    background: linear-gradient(
-    90deg,
-    hsla(0, 0, 0, 0) calc(3.25em - 1px),
-    rgb(0, 208, 255) calc(3.25em),
-    hsla(0, 0, 0, 0) calc(3.25em + 1px)
-    );
-  }
-  .step:first-child {
-    // background-repeat: no-repeat;
-    background-size: 100% 0.1rem;
-  }
-}
+// .stagedd {
+//   .step {
+//     background: linear-gradient(
+//     90deg,
+//     hsla(0, 0, 0, 0) calc(3.25em - 1px),
+//     rgb(0, 208, 255) calc(3.25em),
+//     hsla(0, 0, 0, 0) calc(3.25em + 1px)
+//     );
+//   }
+//   .step:first-child {
+//     // background-repeat: no-repeat;
+//     background-size: 100% 0.1rem;
+//   }
+// }
 .flowline-left {
   background: linear-gradient(
     90deg,
