revert icon-container style

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -722,7 +722,6 @@ nav {
 
 .step {
   display: flex;
-  // margin-left: 2rem;
 }
 
 .stage .divider {
@@ -765,7 +764,7 @@ nav {
   margin-left: 2.6rem;
 }
 
-.-icon-container {
+.step .-icon-container {
   padding-top: 12px;
   padding-bottom: 12px;
 
