--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -562,11 +562,7 @@ nav {
   border-bottom: 2px solid var(--color-green);
 }
 
-.build.-failure {
-  border-top: 2px solid var(--color-red);
-  border-bottom: 2px solid var(--color-red);
-}
-
+.build.-failure,
 .build.-error {
   border-top: 2px solid var(--color-red);
   border-bottom: 2px solid var(--color-red);
