fix(css): fixing build preview style for system errors (#217)
* adding build preview style for system errors

* reuse class

Co-authored-by: David May <1301201+wass3r@users.noreply.github.com>

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -562,7 +562,8 @@ nav {
   border-bottom: 2px solid var(--color-green);
 }
 
-.build.-failure {
+.build.-failure,
+.build.-error {
   border-top: 2px solid var(--color-red);
   border-bottom: 2px solid var(--color-red);
 }
