adding padding to make room for logs sidebar

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -870,6 +870,7 @@ nav {
   max-height: 75rem;
   padding-bottom: 2rem;
   padding-top: 1rem;
+  padding-right: 3rem;
   resize: vertical;
 
   scrollbar-color: var(--color-coal-light) var(--color-bg-dark);
