--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -1418,7 +1418,7 @@ nav {
   @include visually-hidden();
 }
 
-.log-line-word-break {
+.break-text {
   word-break: break-all;
   word-wrap: break-word;
 }
