--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -749,7 +749,7 @@ nav {
   background: linear-gradient(
     90deg,
     hsla(0, 0, 0, 0) calc(3.25em - 1px),
-    var(--color-gray) calc(3.25em),
+    var(--color-flowline) calc(3.25em),
     hsla(0, 0, 0, 0) calc(3.25em + 1px)
   );
 }
