fix(css): adding break-word to logs (#218)
* using break-word with logs

* using break-word with logs

* using break-word with logs

* moving css

* moving css

* rename class to break-text

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -1418,8 +1418,9 @@ nav {
   @include visually-hidden();
 }
 
-.break-all {
+.break-text {
   word-break: break-all;
+  word-wrap: break-word;
 }
 
 .break-word {
