--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -1285,6 +1285,7 @@ nav {
   }
 }
 
+// Secrets Section begin
 .secrets-first-cell {
   padding: 0.5rem 1rem;
   padding-bottom: 0;
@@ -1401,6 +1402,22 @@ nav {
 .secret-form .form-action {
   padding-left: 1rem;
 }
+
+.button.-secret-delete-confirm {
+  background-color: var(--color-bg);
+  color: var(--color-red);
+  border-color: var(--color-red);
+
+  &:hover,
+  &:focus,
+  &:active {
+    background-color: var(--color-red-dark);
+    color: var(--color-offwhite);
+    border-color: var(--color-red-dark);
+  }
+}
+
+// Secrets Section end
 
 .field-description {
   font-size: 1rem;
