--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -582,19 +582,14 @@ nav {
 }
 
 .build-history {
-  ul {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+
+  &.-no-pad {
     margin: 0;
     padding: 0;
   }
-}
-
-.build-history-title {
-  font-size: 0.8em;
-  margin: 0 0.4rem;
-  padding: 0.4rem 0 0;
 }
 
 .recent-build {
