remove double-applied ul style

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -582,7 +582,7 @@ nav {
 }
 
 .build-history {
-  ul {
+  .previews {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -703,7 +703,6 @@ nav {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  width: 100%;
 }
 
 .recent-build-tooltip .number {
@@ -718,9 +717,6 @@ nav {
   padding: 0.2em 0.6em;
 
   font-size: 0.9rem;
-
-  display: flex;
-  flex-direction: column;
 }
 
 .steps {
