feat(secret): restyle really delete to confirm and add border color

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -1419,7 +1419,7 @@ nav {
   &:active {
     background-color: var(--color-red-dark);
     color: var(--color-offwhite);
-    border-color: var(--color-red-dark);
+    border-color: var(--color-offwhite);
   }
 }
 
