adding template-light styles

--- a/src/scss/_themes.scss
+++ b/src/scss/_themes.scss
@@ -147,4 +147,9 @@ body.theme-light {
   .button.-outline.-failure {
     color: var(--color-red-dark);
   }
+
+  .small-loader .-spinner {
+    border-color: var(--color-bg-light);
+    border-top-color: var(--color-bg);
+  }
 }
