--- a/src/scss/_pipelines.scss
+++ b/src/scss/_pipelines.scss
@@ -35,19 +35,26 @@
         margin-right: 1rem;
     }
 
-    background-color: var(--color-bg-dark);
     padding: 0.8rem 0 0.8rem 0;
     margin-bottom: 1rem;
 
+    border: 1px solid transparent;
+    background-color: var(--color-bg-dark);
+
     .content {
-        margin-top:1rem;
+        margin-top: 1rem;
         font-weight: lighter;
-        border-top: 1px solid var(--color-lavender);
+        border-top: 1px solid var(--color-secondary);
         .-error {
             padding: 0.8rem 1rem;
             border-left: 1px solid var(--color-red);
         }
     }
+}
+
+.theme-light .templates {
+    border-color: var(--color-bg-light);
+    background-color: var(--color-bg);
 }
 
 .template {
@@ -99,9 +106,16 @@
     }
 }
 
-
 // modifying styles for build logs components
 // TODO: modularize logs rendering
+.theme-light .pipeline .logs-container {
+    border: 1px solid var(--color-bg-light);
+}
+
+.pipeline .logs-container {
+    border: 1px solid var(--color-bg);
+}
+
 .logs-container.-pipeline {
     margin: 0;
 
@@ -111,7 +125,8 @@
         justify-content: space-between;
         border-bottom: 1px solid var(--color-secondary);
         padding: 0.6rem 0.8rem;
-        font-size: 16px;
+        font-size: 18px;
+        font-weight: normal;
     }
 
     .logs-table {
