--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -41,7 +41,11 @@ header {
 
   padding: 1em var(--horizontal-pad);
 
-  background: radial-gradient(circle at 50% -200%, var(--color-bg-light) -7%, transparent 50%);
+  background: radial-gradient(
+    circle at 50% -200%,
+    var(--color-bg-light) -7%,
+    transparent 50%
+  );
 
   border-top-width: 0;
   border-bottom: var(--line-width) solid;
@@ -143,7 +147,7 @@ header {
       border-radius: 0 0 0 0.25em;
       transform: rotate(135deg);
 
-      content: "";
+      content: '';
 
       clip-path: polygon(0% 0%, 100% 100%, 0% 100%);
     }
@@ -231,7 +235,7 @@ nav {
   /* ellipsis character */
   animation: ellipsis steps(4, end) 900ms infinite;
 
-  content: "\2026";
+  content: '\2026';
 }
 
 .util {
@@ -257,13 +261,13 @@ nav {
   &::before {
     margin-right: 0.3em;
 
-    content: "[";
+    content: '[';
   }
 
   &::after {
     margin-left: 0.3em;
 
-    content: "]";
+    content: ']';
   }
 }
 
@@ -438,6 +442,7 @@ nav {
   display: flex;
   justify-content: flex-end;
   margin-right: 1rem;
+
   div:first-child {
     padding-left: 6rem;
   }
@@ -514,11 +519,13 @@ nav {
 }
 
 .build-animation.-bottom.-running {
-  animation: build-status-parallax-running 26s linear 26s infinite, build-status-parallax-start 26s linear none;
+  animation: build-status-parallax-running 26s linear 26s infinite,
+    build-status-parallax-start 26s linear none;
 }
 
 .build-animation.-top.-running {
-  animation: build-status-parallax-running 22s linear 22s infinite, build-status-parallax-start 22s linear none;
+  animation: build-status-parallax-running 22s linear 22s infinite,
+    build-status-parallax-start 22s linear none;
 }
 
 .build-animation.-bottom.-start {
@@ -693,7 +700,7 @@ nav {
 
   border-width: 5px;
 
-  content: " ";
+  content: ' ';
 }
 
 .recent-build-tooltip .line {
@@ -706,7 +713,7 @@ nav {
   margin-right: 0.5em;
 
   &:before {
-    content: "#";
+    content: '#';
   }
 }
 
@@ -871,6 +878,7 @@ nav {
   padding-bottom: 2rem;
   padding-top: 1rem;
 }
+
 .logs-table.scrollable {
   resize: vertical;
   overflow-y: auto;
@@ -879,6 +887,7 @@ nav {
   scrollbar-color: var(--color-coal-light) var(--color-bg-dark);
   scrollbar-width: thin;
 }
+
 .logs-table tr td:nth-child(2) {
   padding-left: 1rem;
 }
@@ -1177,7 +1186,7 @@ nav {
   &::after {
     display: block;
     position: absolute;
-    content: "";
+    content: '';
     top: -0.5rem;
     right: 0;
     border-color: transparent;
@@ -1357,7 +1366,7 @@ nav {
 }
 
 .added-image.chevron:before {
-  content: "";
+  content: '';
   border-style: solid;
   border-width: 0.1rem 1rem 0.1rem 0.2rem;
   border-color: var(--color-primary);
