--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -240,9 +240,26 @@ nav {
 
 .util {
   display: flex;
-
-  min-height: 3rem;
+  flex-direction: row;
+  align-items: center;
+  min-height: 5rem;
   padding-bottom: 0.3rem;
+  justify-content: center;
+  .left {
+    flex: 1;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+  }
+  .middle {
+    flex: 2;
+  }
+  .right {
+    flex: 1;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+  }
 }
 
 .filtered-repos {
