--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -1,31 +1,35 @@
+// Copyright (c) 2020 Target Brands, Inc. All rights reserved.
+//
+// Use of this source code is governed by the LICENSE file in this repository.
 
+// ┌┐┌┌─┐┬  ┬
+// │││├─┤└┐┌┘
+// ┘└┘┴ ┴ └┘ 
+
+// style for application nav
 
 .jump-bar {
     display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    // background-color: red;
-    padding: 1rem;
-    padding-left: 0;
+    padding: 1rem 0;
     width: 100%;
 }
 
 .jump-bar .jump {
-
     padding-bottom: 1rem;
-    // padding-right: 1rem;
     border-bottom: 3px solid var(--color-bg-light);
     text-decoration: none;
     font-weight: lighter;
     color: var(--color-text);
-    outline:none;
+
     &.current {
         font-weight: bold;
         border-color: var(--color-primary);
     }
+    
     &.spacer {
         width: 2rem;
     }
+
     &.fill {
         flex: 1;
     }
