--- a/src/scss/_table.scss
+++ b/src/scss/_table.scss
@@ -112,6 +112,10 @@
 
   .table-base caption {
     font-size: 1.3em;
+
+    .buttons {
+      display: inline-block;
+    }
   }
 
   .table-base thead {
