moving margin to padding for lint

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -597,8 +597,7 @@ nav {
 
 .build-history-title {
   font-size: 0.8em;
-  margin: 0 0.4rem;
-  padding: 0.4rem 0 0;
+  padding: 0.4rem 0 0.4rem 0.4rem;
   display: inline;
 }
 
