--- a/src/scss/_pipelines.scss
+++ b/src/scss/_pipelines.scss
@@ -148,6 +148,10 @@
     font-size: 18px;
 
     border-bottom: 1px solid var(--color-secondary);
+
+    .link {
+      margin-left: 1rem;
+    }
   }
 
   .logs-table {
