--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -21,7 +21,17 @@
   padding: 1rem 0;
 }
 
-.jump-bar .jump {
+.jump-bar .jump-button {
+  font-size: 18px;
+
+  background-color: var(--color-bg);
+  border-top: none;
+  border-right: none;
+  border-left: none;
+}
+
+.jump-bar .jump,
+.jump-bar .jump-button {
   padding: 1rem;
 
   color: var(--color-text);
