adding build services, WIP

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -1451,6 +1451,11 @@ nav {
 .break-text {
   word-break: break-all;
   word-wrap: break-word;
+
+  
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+
 }
 
 .break-word {
